log/build_2026-03-29_16-33-10/pioneer/stderr.log
  File "/home/jeremy/Resources/install/pioneer/lib/python3.12/site-packages/pioneer/velocity_publisher.py", line 76
    def odom.callback(self, msg):
            ^
SyntaxError: expected '('

